banner section and donate today section done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PMH Donate Organization</title>
     <link rel="stylesheet" href="style/main-style.css">
+    <link rel="stylesheet" href="style/mobile-responsive-style.css">
+    <link rel="stylesheet" href="style/tablet-responsive-style.css">
+    <link rel="stylesheet" href="style/laptop-responsive-style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="banner-container">
+            <div class="banner-area">
+                <div class="banner-text">
+                    <h1>Let’s Help Those Who Are More In Need</h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <div class="btn">
+                        <button><a href="">Donate Now</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="donate-today-container">
+            <div class="donate-today-area">
+                <div class="donate-today-text">
+                   <div class="danate-today-heading">
+                    <h2>Donate Today</h2>
+                    <p class="description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                   </div>
+                    <div class="donate-today-card">
+                        <div class="card">100tk</div>
+                        <div class=" card card2">200tk</div>
+                        <div class="card">500tk</div>
+                        <div class="card">1000tk</div>
+                        <div class="card">5000tk</div>
+                    </div>
+                    <p class="amount">Other Amount (Taka)</p>
+                    <div class="btn"><button><a href="">Donate Now</a></button></div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
