depend section done

--- a/index.html
+++ b/index.html
@@ -43,6 +43,46 @@
                 </div>
             </div>
         </section>
+
+        <section class="donate-plan-container">
+            <div class="donate-plan-area">
+                <div class="donate-plan-text">
+                    <h2>Our Donate Plan</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                </div>
+                <div class="donate-plan-card">
+                    <div class="food-card">
+                        <img src="icons/food.png" alt="">
+                        <h4>Food for a family</h4>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="shelter-card">
+                        <img src="icons/shelter.png" alt="">
+                        <h4>Shelter for a family</h4>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                    <div class="education-card">
+                        <img src="icons/Frame-1.png" alt="">
+                        <h4>Education for a child</h4>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="depend-container">
+            <div class="depend-area">
+                <div class="depend-text-area">
+                    <h2>Their lives depend on your donation</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                    <button><a href="">How to Contribute?</a></button>
+                </div>
+                <div class="depend-img-area">
+                    <img src="images/donation6.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
