--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
                 </div>
             </div>
         </section>
+
+        <section class="servive-container">
+            <div class="servive-area">
+                <div class="servive-img-area">
+                    <img src="images/New Project.png" alt="">
+                </div>
+                <div class="servive-text-area">
+                    <h2>They need us to suvive</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                    <button><a href="">How to Contribute?</a></button>
+                </div>
+            </div>
+        </section> 
     </main>
 </body>
 </html>
