--- a/index.html
+++ b/index.html
@@ -95,7 +95,20 @@
                     <button><a href="">How to Contribute?</a></button>
                 </div>
             </div>
-        </section> 
+        </section>
+        
+        <section class="update-container">
+            <div class="update-area">
+                <div class="update-text-area">
+                    <h2>Get My Updates</h2>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                </div>
+                <div class="update-input-area">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <button><a href="">Subscribe</a></button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
