footer section done

--- a/index.html
+++ b/index.html
@@ -110,5 +110,11 @@
             </div>
         </section>
     </main>
+    <footer class="footer-container">
+        <div class="footer-area">
+            <h2>Be Humble</h2>
+            <p>I’m gonna do it</p>
+        </div>
+    </footer>
 </body>
 </html>
